[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_4lfa5"]
[ext_resource type="FontFile" uid="uid://b5edngs8ati0g" path="res://assets/fonts/ARCADECLASSIC.TTF" id="2_ra5d7"]
[ext_resource type="Texture2D" uid="uid://bvft3iv6uotp2" path="res://assets/images/close.png" id="3_brmj5"]

[sub_resource type="LabelSettings" id="LabelSettings_sqkkl"]
font = ExtResource("2_ra5d7")
font_size = 54

[sub_resource type="LabelSettings" id="LabelSettings_qmqpu"]
font = ExtResource("2_ra5d7")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_no2hq"]
font = ExtResource("2_ra5d7")
font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1usn"]

[sub_resource type="LabelSettings" id="LabelSettings_nm4a6"]
font = ExtResource("2_ra5d7")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_qt7vj"]
line_spacing = 30.0
font = ExtResource("2_ra5d7")
font_size = 30

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4lfa5")

[node name="Title_Label" type="Label" parent="." groups=["handling_buttons"]]
layout_mode = 0
offset_left = 5.0
offset_top = 209.0
offset_right = 545.0
offset_bottom = 273.0
text = "Aliens and The Duck"
label_settings = SubResource("LabelSettings_sqkkl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start_Button" type="Button" parent="." groups=["handling_buttons"]]
layout_mode = 0
offset_left = 200.0
offset_top = 494.0
offset_right = 350.0
offset_bottom = 544.0

[node name="Start_Label" type="Label" parent="Start_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"
label_settings = SubResource("LabelSettings_qmqpu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options_Button" type="Button" parent="." groups=["handling_buttons"]]
layout_mode = 0
offset_left = 200.0
offset_top = 554.0
offset_right = 350.0
offset_bottom = 604.0

[node name="Options_Label" type="Label" parent="Options_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
label_settings = SubResource("LabelSettings_qmqpu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HowToPlay_Button" type="Button" parent="." groups=["handling_buttons"]]
layout_mode = 0
offset_left = 200.0
offset_top = 614.0
offset_right = 350.0
offset_bottom = 664.0

[node name="HowToPlay_Label" type="Label" parent="HowToPlay_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "How to play"
label_settings = SubResource("LabelSettings_qmqpu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits_Button" type="Button" parent="." groups=["handling_buttons"]]
layout_mode = 0
offset_left = 200.0
offset_top = 676.0
offset_right = 350.0
offset_bottom = 726.0

[node name="Credits_Label" type="Label" parent="Credits_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits"
label_settings = SubResource("LabelSettings_qmqpu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 75.0
offset_right = 545.0
offset_bottom = 825.0

[node name="Easy_Button" type="Button" parent="Start"]
layout_mode = 0
offset_left = 145.0
offset_top = 300.0
offset_right = 395.0
offset_bottom = 370.0

[node name="Easy_Text" type="Label" parent="Start/Easy_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Easy"
label_settings = SubResource("LabelSettings_no2hq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hard_Button" type="Button" parent="Start"]
layout_mode = 0
offset_left = 145.0
offset_top = 380.0
offset_right = 395.0
offset_bottom = 450.0

[node name="Hard_Text" type="Label" parent="Start/Hard_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Hard"
label_settings = SubResource("LabelSettings_no2hq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 75.0
offset_right = 545.0
offset_bottom = 825.0

[node name="Close_Button_3" type="Button" parent="Options"]
layout_mode = 0
offset_left = 487.0
offset_top = 8.0
offset_right = 522.0
offset_bottom = 43.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_f1usn")
icon = ExtResource("3_brmj5")

[node name="Sound_Button" type="Button" parent="Options"]
layout_mode = 0
offset_left = 145.0
offset_top = 300.0
offset_right = 395.0
offset_bottom = 370.0

[node name="Sound_Text" type="Label" parent="Options/Sound_Button"]
layout_mode = 0
offset_left = 4.0
offset_right = 181.0
offset_bottom = 71.0
text = "Background Music:"
label_settings = SubResource("LabelSettings_no2hq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound_Value" type="Label" parent="Options/Sound_Button"]
layout_mode = 0
offset_left = 203.0
offset_top = 1.0
offset_right = 254.0
offset_bottom = 76.0
text = "on"
label_settings = SubResource("LabelSettings_nm4a6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quack_Button" type="Button" parent="Options"]
layout_mode = 0
offset_left = 145.0
offset_top = 380.0
offset_right = 395.0
offset_bottom = 450.0

[node name="Quack_Text" type="Label" parent="Options/Quack_Button"]
layout_mode = 0
offset_left = 4.0
offset_right = 181.0
offset_bottom = 71.0
text = "Character Sound:"
label_settings = SubResource("LabelSettings_no2hq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quack_Value" type="Label" parent="Options/Quack_Button"]
layout_mode = 0
offset_left = 193.0
offset_top = 1.0
offset_right = 254.0
offset_bottom = 76.0
text = "on"
label_settings = SubResource("LabelSettings_nm4a6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HowToPlay" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 36.0
offset_right = 545.0
offset_bottom = 838.0
text = "
Use  The  A - D   keys   to  move  the  character  horizontally,   dodging The   Aliens  in  result.

After   recieving   bullets (randomly between   4-8   seconds), you   can   shoot them   by   pressing   enter. 

You   have  5  lives  in  
total  for  each  round"
label_settings = SubResource("LabelSettings_qt7vj")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Close_Button_2" type="Button" parent="HowToPlay"]
layout_mode = 0
offset_left = 487.0
offset_top = 8.0
offset_right = 522.0
offset_bottom = 43.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_f1usn")
icon = ExtResource("3_brmj5")

[node name="Credits" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 75.0
offset_right = 545.0
offset_bottom = 825.0
text = "

Designed and developed by
 Soroush Yadollahpour (Hichkas47)

Themed on 1978 game by
 Tomohiro Nishikado
Called Space Invaders

Asset Pack By Comp-3 Interactive
Music By DLJ (Night Emotions)"
label_settings = SubResource("LabelSettings_qt7vj")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Close_Button" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 487.0
offset_top = 8.0
offset_right = 522.0
offset_bottom = 43.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_f1usn")
icon = ExtResource("3_brmj5")

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HowToPlay_Button" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Credits_Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Start/Easy_Button" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="Start/Hard_Button" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="Options/Close_Button_3" to="." method="_on_close_button_3_pressed"]
[connection signal="pressed" from="Options/Sound_Button" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="Options/Quack_Button" to="." method="_on_quack_button_pressed"]
[connection signal="pressed" from="HowToPlay/Close_Button_2" to="." method="_on_close_button_2_pressed"]
[connection signal="pressed" from="Credits/Close_Button" to="." method="_on_close_button_pressed"]
